--- a/Web_Scrapper/config.yaml
+++ b/Web_Scrapper/config.yaml
@@ -1,13 +1,19 @@
 news_sites:
   eluniversal:
-    url: http://www.eluniversal.com.mx
+    url: https://www.eluniversal.com.mx
     queries:
       homepage_articule_links: '.field-content a'
       article_body: '.field-name-body'
       article_title: '.pane-content h1'
   elpais:
-    url: http://www.eluniversal.com.mx
+    url: https://elpais.com
     queries:
-      homepage_articule_links: ''
-      article_body: ''
-      article_title: ''
+      homepage_articule_links: '.articulo-titulo a'
+      article_body: '.articulo-cuerpo'
+      article_title: '.articulo-titulo'
+  eldeforma:
+    url: https://eldeforma.com/
+    queries:
+      homepage_articule_links: '.article__header  a'
+      article_body: '.article__content'
+      article_title: '.article--title'
